<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".fragments.SelectorEditFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_edit_label_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alert_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_edit_label_comment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alert_edit_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_edit_label_min_secs_between_alerts">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alert_edit_min_secs_between_alerts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_edit_sound_uri">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alert_edit_sound_uri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_edit_vibration_pattern">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alert_edit_vibration_pattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/alert_edit_alert_when_screen_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_edit_alert_when_screen_on" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/alert_edit_absolute_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_edit_absolute_volume" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_edit_volume_percent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alert_edit_volume_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/alert_edit_ringer_modes_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/alert_edit_ringer_modes_heading"
            android:textColor="@android:color/primary_text_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alert_edit_sound_ringer_modes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_edit_sound_ringer_modes" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/alert_edit_sound_ringer_modes_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/alert_edit_sound_ringer_mode_silent"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_edit_sound_ringer_mode_silent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/alert_edit_sound_ringer_mode_vibrate"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_edit_sound_ringer_mode_vibrate" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/alert_edit_sound_ringer_mode_normal"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_edit_sound_ringer_mode_normal" />

            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alert_edit_vibration_ringer_modes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_edit_vibration_ringer_modes" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/alert_edit_vibration_ringer_modes_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/alert_edit_vibration_ringer_mode_silent"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_edit_vibration_ringer_mode_silent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/alert_edit_vibration_ringer_mode_vibrate"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_edit_vibration_ringer_mode_vibrate" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/alert_edit_vibration_ringer_mode_normal"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_edit_vibration_ringer_mode_normal" />

            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_edit_relative_volume_stream">

            <AutoCompleteTextView
                android:id="@+id/alert_edit_relative_volume_stream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>